Prevent submit timestamp from wrapping to next line. Using CSS instead of defining fixed width.

--- a/share/pegasus/dashboard/static/css/style.css
+++ b/share/pegasus/dashboard/static/css/style.css
@@ -115,3 +115,8 @@ p
 	max-width: 50%; 
 	
 }
+
+.nowrap
+{
+	white-space: nowrap;
+}
